# Cuda-Image-Equalization

./: CMakeLists.txt  histogram_eq_kernels.cu  histogram_eq_kernels.h  histogram_eq_main.cu  histogram_eq_wrapper.cu  readme.md  test_hist_eq.py
